gegl: Add photos_gegl_buffer_new_from_pixbuf

This is part of a new set of APIs for GeglBuffer that don't require the
creation of a graph. These will allow decoding and encoding image file
formats to and from a GeglBuffer through asynchronous and cancellable
methods with error handling. These will follow GIO idioms and be
similar to the codec APIs for GdkPixbuf. There will be a compatibility
layer to convert a GeglBuffer to and from GdkPixbuf for legacy reasons.

These APIs will address the current lack of cancellation and error
handling in gegl:load, and make it easier to port existing code away
from GdkPixbuf.

A subsequent commit will use this method to optimize the application of
a BaseItem's embedded orientation.

Bump minimum GdkPixbuf version to 2.32.

https://bugzilla.gnome.org/show_bug.cgi?id=781736